[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "text-utils-ronnie"
version = "0.1.0"  # Lembre-se de aumentar aqui antes de cada release
authors = [
  { name="Nathan da Costa Silva", email="seu-email@exemplo.com" },
]
description = "Uma biblioteca útil para manipulação de textos"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    # Liste aqui as bibliotecas que seu código usa (ex: requests, numpy)
]

[project.urls]
"Homepage" = "https://github.com/NathanCosta-S/textUtils"
"Bug Tracker" = "https://github.com/NathanCosta-S/textUtils/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
